# dota_spectator

./: .dockerignore  .gitignore  DOCKER_README.md  Dockerfile  Procfile  README.md  README_DISCORD.md  discord_bot.py  docker-compose.yml  get_players.py  pyproject.toml  requirements.txt  run_server.py  test_bot.py  visualize_match.py
gsi_config/: gamestate_integration_dota2.cfg  gamestate_integration_dota2.cfg.example
scripts/: get_server_ip.py
src/: __init__.py  config.py  data_processor.py  file_manager.py  server.py  utils.py
