[project]
name = "dota-spectate"
version = "1.0.0"
description = "Dota 2 GSI интеграция для получения данных о матчах в реальном времени"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "matplotlib>=3.8.2",
    "pillow>=10.0.0",
    "discord.py>=2.3.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

